# body-fat-tracker

./: .env.example  .gitignore  DOCKER.md  PRD.md  backup.sql  docker-compose.yml  export_postgresql.txt
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  create_db.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ebc9f72860b_add_bodymetric_model.py  3d82d46d29f6_remove_bone_mass_from_bodymetric.py  559988ce0cb9_add_ffmi_and_bmr.py  90514b123601_add_bone_mass_to_bodymetric.py  9b75a97a70cf_initial_migration.py  b456a856eb9f_add_user_profile_fields.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: body_metrics.py  login.py  users.py
backend/app/core/: calculations.py  config.py  db.py  security.py
backend/app/models/: __init__.py  body_metric.py  token.py  user.py
backend/backend.git.backup/: COMMIT_EDITMSG  config  index
backend/backend.git.backup/logs/: HEAD
backend/backend.git.backup/logs/refs/remotes/origin/: master
backend/backend.git.backup/refs/heads/: master
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: auth-theme.css  layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/themes/: base.css  theme-dark.css  (+4 more)
frontend/src/components/: providers.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts  bmiFfmiRanges.json  bodyFatRanges.json  bodyWaterRanges.json  muscleMassRanges.json  utils.ts
frontend/src/types/: index.ts
(+26 files in other folders)
